--- a/jutam-api/src/main/resources/application.properties
+++ b/jutam-api/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/mapservice?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 
 # DB username
-spring.datasource.username=root
+spring.datasource.username=ubuntu
 
 # DB password
 spring.datasource.password=wjdqhqhdks
